tests/e2e/semantics/time_op_string.error
Error: syntax error in story at line 2, column 5

2|    b = a + "a"
          ^^^^^^^

E0103: `+` between `time` and `string` is not supported.
