tests/e2e/semantics/time_op_string.story
a = 5s
b = a + "a"
